# simPRO-Incremental-Caching-System

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  LICENSE  README.md  build.rs  diesel.toml  docker-compose.yml  init.sql  openapi.yaml  rustfmt.toml
data/: webhook-events.json
ngrok/: ngrok.yml.example
prepare/acquire-sh/: README.md  acquire.sh  convert.sh
prepare/acquire-sh/lib/: utils.sh
prepare/acquire-sh/lib/postman/create/: collection.sh  workspace.sh
prepare/process-py/: config.yaml  main.py
prepare/process-py/openapi_util/: io.py  utils.py
prepare/process-py/openapi_util/schema/: config.py  openapi.py
scripts/: .env.example  README.md  transform.sh  trim.sh
scripts/lib/: env.sh
scripts/lib/postman/: http.sh  transform.sh
scripts/lib/postman/get/: collection.sh  workspace.sh
src/: api.rs  bin.rs  db.rs  macro.rs  main.rs  parse.rs  time.rs
src/parse/: into_rows.rs  mod.rs  reference.rs  rows.rs
src/parse/schedule/: reference.rs
src/records/: get_.rs  get_records.rs  hydrate.rs  mod.rs  paginate.rs  persist.rs  prefetch.rs  remove_records.rs  upsert_.rs  upsert_records.rs
src/records/api/: into_rows.rs  macro.rs  retrieval.rs
src/records/database/: addition.rs  macro.rs  remove.rs  translation.rs  transpose.rs
src/serve/: events.rs  mod.rs  response.rs  serve.rs  serve_events.rs  serve_requests.rs  view.rs
src/utils/: time.rs
src/webhook/: events.rs  getter.rs  handler.rs  mod.rs  payload.rs  variants.rs
xtask/: Cargo.toml  Dockerfile  config.yaml
xtask/src/: main.rs  misc.rs  openapi.rs
xtask/src/docker/: config.rs  diesel.rs  postgres.rs
