[package]
name = "simpro_incremental_caching_system"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "xtask"
]

[dependencies]
# ----------------------------
# ERROR ENUMERATION
# ----------------------------
thiserror = "1"
# ----------------------------
# ERROR ERASURE
# ----------------------------
anyhow = "1.0.102"
# ----------------------------
# ASYNC RUNTIME
# ----------------------------
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
# ----------------------------
# WEB FRAMEWORK
# ----------------------------
axum = "0.8.8"
# ----------------------------
# HTTP CLIENT
# ----------------------------
progenitor-middleware-client = "0.12"
reqwest = { version = "0.12", features = ["json", "stream"], default-features = false }
reqwest-middleware = "0.4.2"
reqwest-retry = { version = "0.8", features = ["tracing"] }
retry-policies = "0.5"
# ----------------------------
# SQL QUERY BUILDING
# ----------------------------
diesel = { version = "2.3.7", features = ["postgres", "chrono", "numeric", "r2d2"], default-features = false }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
r2d2 = "0.8"
# ----------------------------
# JSON DESERIALIZATION
# ----------------------------
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
# ----------------------------
# ENVIRONMENT VARIABLES
# ----------------------------
dotenvy = "0.15"
# -----------------------------
# MESSAGE VERIFICATION
# -----------------------------
hex = "0.4.3"
hmac = "0.12.1"
sha1 = "0.10.6"
# ----------------------------
# THREAD-LOCAL LOGGING
# ----------------------------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# -------------------------------
# HTTP REQUEST-RESPONSE LOGGING
# -------------------------------
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing-error = "0.2.1"
strum = "0.28.0"
strum_macros = "0.28.0"
chrono = "0.4.44"


# https://github.com/oxidecomputer/progenitor#buildrs
[build-dependencies]
prettyplease = "0.2.22"
# progenitor-middleman
progenitor-middleware = "0.12"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
serde_yaml = "0.9"
syn = "2.0"
anyhow = "1.0.1"
proc-macro2 = "1.0.1"
sha2 = "0.11.0"
hex = "0.4.3"
openapiv3 = "2.2.0"
quote="1.0"
