[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
sqlparser = "0.61"
nix = { version = "0.31", default-features = false, features = ["user"] }
syn = { version = "2", features = ["full", "visit", "visit-mut", "printing"] }
prettyplease = "0.2"
clap = { version = "4", features = ["derive"] }
openapiv3 = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
pluralizer = "0.5"
heck = "0.5"
which = "8"